5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1785_3124.log
== TEST (2019-05-30 11:15:38) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 1
mt = 1
while(i <= size(vet) - 1):
	mt = mt * vet[i] * vet[j]
	i = i + 2
	j = j + 2
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:46) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 1
mt = 1
while(i <= size(vet)):
	mt = mt * vet[i] * vet[j]
	i = i + 2
	j = j + 2
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:19:43) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 1
mt = 1
while(j <= size(vet) - 1):
	mt = mt * vet[i] * vet[j]
	i = i + 2
	j = j + 2
media = mt ** (n ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:20:17) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 1
mt = 1
while(j <= size(vet) - 1):
	mt = mt * vet[i] * vet[j]
	i = i + 2
	j = j + 2
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:20:35) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 1
mt = 1
while(j <= size(vet) - 1):
	mt = mt * vet[i] * vet[j]
	i = i + 2
	j = j + 2
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:28) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 1
mt = 1
while(j <= size(vet) - 1):
	mt = mt * vet[i] * vet[j]
	i = i + 2
	j = j + 2
	print(mt)
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:37) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 1
mt = 1
while(j <= size(vet) - 1):
	mt = mt * (vet[i] * vet[j])
	i = i + 2
	j = j + 2
	print(mt)
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:24:32) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 1
mt = 1
n = 0
while(n <= size(vet)):
	mt = mt * (vet[i] * vet[j])
	i = i + 2
	j = j + 2
	n = n + 1
	print(mt)
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:24:58) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 1
mt = 1
n = 0
while(n < size(vet)):
	mt = mt * (vet[i] * vet[j])
	i = i + 2
	j = j + 2
	n = n + 1
	print(mt)
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:20) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1

while(n < size(vet)):
	mt = mt * (vet[i] * vet[i + 1])
	i = i + 2
	print(mt)
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:53) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = 0
while(n < size(vet)):
	mt = mt * (vet[i] * vet[i + 1])
	i = i + 2
	n = n + 1
	print(mt)
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:39) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = 0
while(n <= size(vet)-1):
	mt = mt * (vet[i] * vet[i + 1])
	i = i + 2
	n = n + 1
	print(mt)
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:29:24) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
while(i <= size(vet)-2):
	mt = mt * (vet[i] * vet[i + 1])
	i = i + 2
	print(mt)
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:36) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
while(i <= size(vet)-2):
	mt = mt * (vet[i] * vet[i + 1])
	i = i + 2
	print(mt)
media = mt ** (size(vet) ** -1)
print(round(mt, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:34:57) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
while(i <= size(vet)-2):
	mt = vet[i] * vet[i + 1]
	i = i + 2
	print(mt)
media = mt ** (size(vet) ** -1)
#print(round(mt, 2))
print(size(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:04) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
while(i <= size(vet)-2):
	mt = vet[i] * vet[i + 1]
	i = i + 2
	print(mt)
media = mt ** (size(vet) ** -1)
#print(round(mt, 2))
print(size(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:01) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i <= n-2):
	mt = vet[i] * vet[i + 1]
	i = i + 2
	print(mt)
media = mt ** (n ** -1)
#print(round(mt, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:06) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i <= n-1):
	mt = vet[i] * vet[i + 1]
	i = i + 2
	print(mt)
media = mt ** (n ** -1)
#print(round(mt, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:22) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i <= n+1):
	mt = vet[i] * vet[i + 1]
	i = i + 2
	print(mt)
media = mt ** (n ** -1)
#print(round(mt, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:58) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i <= n+2):
	mt = vet[i] * vet[i + 1]
	i = i + 2
	print(mt)
media = mt ** (n ** -1)
#print(round(mt, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:06) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i <= n-2):
	mt = vet[i] * vet[i + 1]
	i = i + 2
	print(mt)
media = mt ** (n ** -1)
#print(round(mt, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:18) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-2):
	mt = vet[i] * vet[i + 1]
	i = i + 2
	print(mt)
media = mt ** (n ** -1)
#print(round(mt, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:30) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-1):
	mt = vet[i] * vet[i + 1]
	i = i + 2
	print(mt)
media = mt ** (n ** -1)
#print(round(mt, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:39:19) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-1):
	mt = vet[i] * vet[i + 1]
	i = i + 2
	print(mt)
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:40:46) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 0
mt = 1
n = size(vet)
while(j < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
	j = j + 1
	print(mt)
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:12) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 0
mt = 1
n = size(vet)
while(j <= n):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
	j = j + 1
	print(mt)
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:10) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 0
mt = 1
n = size(vet)
while(j <= n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
	j = j + 1
	print(mt)
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:23) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
j = 0
mt = 1
n = size(vet)
while(j < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
	j = j + 1
	print(mt)
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:01) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0

mt = 1
n = size(vet)
while(i < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
	
	print(mt)
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:21) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0

mt = 1
n = size(vet)
while(i < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
	
	print(mt)
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:48) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0

mt = 1
n = size(vet)
while(i < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:00) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0

mt = 1
n = size(vet)
while(i < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:25) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i <= n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:52) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-2):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:46:00) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-2):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:47:25) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:32) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
j = 0
n = size(vet)
while(j + 1 < n):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
	j = j + 1
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:35) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
j = 0
n = size(vet)
while(j < n):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
	j = j + 1
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:00) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
j = 0
n = size(vet)
while(j < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
	j = j + 1
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:27) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1

n = size(vet)
while(i < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:50:36) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1

n = size(vet)
while(i < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- EXECUTION TIME:
0.361471
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
3.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
1.97
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:05) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-2):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:51:12) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-2):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- EXECUTION TIME:
0.420051
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
3.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
1.81
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
1.97
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:53:18) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** ((n-1) ** -1)
print(round(media, 2))

-- EXECUTION TIME:
0.501669
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.03
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
4.18
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
2.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:53:23) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** ((n ** -1)
print(round(media, 2))

-- EXECUTION TIME:
0.185268
-- ERROR:
  File "/home/codebench/codes/1785/3124/main.py", line 10
    print(round(media, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:53:27) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** ((n ** -1)
print(round(media, 2))

-- EXECUTION TIME:
0.151712
-- ERROR:
  File "/home/codebench/codes/1785/3124/main.py", line 10
    print(round(media, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:53:55) 
-- CODE:
from numpy import *
vet = array(eval(input("Numeros positivos: ")))
i = 0
mt = 1
n = size(vet)
while(i < n-1):
	mt = mt * vet[i] * vet[i + 1]
	i = i + 2
media = mt ** (n ** -1)
print(round(media, 2))

-- EXECUTION TIME:
0.436731
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
3.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
1.97
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
